allow docs to load too
